# CQmanager

./: .gitignore  README.md  pyproject.toml
CQmanager/: app.py  main.py  run_app.py  supporting_scripts_for_downsizing.py  task_managers.py
CQmanager/core/: config.py  logging.py
CQmanager/docker_classes/: CQviewersRunner.py  DockerRunner.py  docker_functions.py  docker_settings.py
CQmanager/endpoint_models/: CQdownsizeAnnotatedSamples.py  CQmissingSettings.py  CQsettings.py  SummaryPlotting.py  SummaryPlottingEndpointValidator.py
CQmanager/handlers/: handle_shutdown.py  handlers.py
CQmanager/models/: AnalysisTaskData.py  BatchRequestProcessor.py
CQmanager/models/v1/: AnalysisTaskData.py  BatchRequestProcessor.py
CQmanager/routers/: router_analyse.py  router_cleanups.py  router_control_cqviewers.py  router_crash_simulation.py  router_status.py  router_stop_analysis_containers.py  router_summary_plots.py  router_update_data_annotation.py
CQmanager/service_helpers/: AnalysisManager_helpers.py  docker_execution_command.py
CQmanager/services/: AnalysisManager.py  Cooldown.py  FileCleaner.py  SummaryPlotter.py  TaskManager.py  TaskQueue.py  TaskType.py  docker_runners.py  tasks.py
CQmanager/utilities/: checkups.py  downsize_utils.py  endpoint_utilities.py  execution_dictionary.py  system_memory.py  utilities.py
