[project]
name = "cqmanager"
version = "3.0.3"
requires-python = ">=3.10, <3.13"
license = "MIT"
authors = [{name = "Benjamin Freyter", email = "benjaminmaciej.freyter@usb.ch"}]
description = "CQmanager is a FastAPI-based web application to manage CnQuant jobs."
dependencies = [
    "cnquant_dependencies @ git+https://github.com/neuropathbasel-pub/CnQuant_dependencies.git",
    "CnQuant_utilities @ git+https://github.com/neuropathbasel-pub/CNV_apps_utilities.git",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cnquant-utilities",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "dotenv==0.9.9",
    "email-validator==2.2.0",
    "executing==2.2.0",
    "fastapi==0.115.11",
    "fastapi-cli==0.0.7",
    "frozenlist==1.5.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "icecream>=2.1.8",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "orjson>=3.10.12",
    "packaging==24.2",
    "paramiko==3.5.1",
    "polars==1.25.2",
    "propcache==0.3.0",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.2",
    "pydantic-settings==2.8.1",
    "pygments==2.19.1",
    "pynacl==1.5.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "ujson==5.10.0",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
    "yarl==1.18.3",
    "pytest>=8.4.2",
]

scripts = { "run_cqmanager" = "CQmanager.run_app:main" }
# dynamic = ["readme"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["CQmanager*"]
exclude = ["test_data*", "docker_image*"]

[tool.uv.sources]
CnQuant_utilities = { git = "https://github.com/neuropathbasel-pub/CNV_apps_utilities" }
cnquant_dependencies = { git = "https://github.com/neuropathbasel-pub/CnQuant_dependencies" }
